# CMake_project_preparation

CUDA_TOOLKIT_/: CMakeLists.txt
DEPRECATED_LIST/: CMakeLists.txt
Headr_Only/: CMakeLists.txt
Headr_Only/src/: math.hpp
Headr_Only/tests/: math_test.cpp
InBinEx/: CMakeLists.txt  preload_forced.cmake  preload_normal.cmake
InBinEx_2nd_part/: CMakeLists.txt
InBinEx_2nd_part/src/: formatter.cpp  formatter.h  mytool.cpp
KOKKOS_OPTION/: CMakeLists.txt
ModernCmake/: CMakeLists.txt
ModernCmake/include/: math_lib.hpp
ModernCmake/src/: main.cpp  math_lib.cpp
Module_lib_O_lib/: CMakeLists.txt
Module_lib_O_lib/include/: solver_interface.hpp
Module_lib_O_lib/src/: error_calc.cpp  euler.cpp  main.cpp
OPenMP/: CMakeLists.txt
Object_lib/: CMakeLists.txt
Object_lib/include/: rk4_solver.hpp
Object_lib/src/: main.cpp  rk4_solver.cpp
SHARED_LIB/: CMakeLists.txt
SHARED_LIB/include/: multiply.cpp
SHARED_LIB/src/: main.cpp  phsyics.cpp
Static_Lib/: CMakeLists.txt
Static_Lib/include/: math_tools.hpp  volume.hpp
Static_Lib/src/: main.cpp  math_tools.cpp  volume.cpp
add_custom_command/: CMakeLists.txt
add_custom_command/data/: raw.txt
add_custom_command/src/: generator.cpp  string_utils.cpp  string_utils.h
add_custom_target/: CMakeLists.txt
add_custom_target/src/: main.cpp
add_dependencies/: CMakeLists.txt
add_dependencies/src/: main.cpp
cxx_module/: CMakeLists.txt
cxx_module/src/: main.cpp  math_core.cppm
target_compile_options2/: CMakeLists.txt
target_compile_options2/src/: legacy.c  main.cpp  math.cpp
target_compiler_options/: CMakeLists.txt
target_compiler_options/include/: secure_math.hpp
target_compiler_options/src/: main.cpp  secure_math.cpp
target_sources/: CMakeLists.txt
target_sources/app/: main.cpp
target_sources/include/solver/: linear_solver.hpp  nonlinear_solver.hpp  solver.hpp
target_sources/interface/: solver_api.hpp
target_sources/modules/: matrix_ops.cppm  vector_ops.cppm
target_sources/src/: dbgsrc.cpp  internal_utils.cpp  internal_utils.hpp  linear_solver.cpp  nonlinear_solver.cpp  solver.cpp
