cmake_minimum_required(VERSION 3.10)
project(Faltu_project)
add_library(er OBJECT src/error_calc.cpp)
target_include_directories(er PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_library(euler MODULE src/euler.cpp)
target_include_directories(euler PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(solve src/main.cpp)
target_link_libraries(solve PUBLIC er)
if(UNIX AND NOT APPLE)
    target_link_libraries(solve PRIVATE dl)
endif()