cmake_minimum_required(VERSION 3.10)
project(tar_comp_op)
add_library(sm STATIC src/secure_math.cpp)
target_include_directories(sm PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(sm PRIVATE -Wall -Wextra)
target_compile_options(sm INTERFACE -Werror)
add_executable(man src/main.cpp)
target_compile_options(man PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fdiagnostics-color=always>)
target_compile_options(man BEFORE PRIVATE -O3)
target_compile_options(man PRIVATE "SHELL:-m64 -ffast-math")
target_link_libraries(man PRIVATE sm)